# commandArgsParser

./: CMakeLists.txt  README.md
source/commandArgsParser/: CMakeLists.txt  parser.c  parser.h  parser_cpp.cpp  parser_cpp.h
source/commandArgsParser/internal/: fileitem.c  fileitem.h  map.c  map.h  option.c  option.h  optiontype.c  optiontype.h  parser.c  parser.h  parser_cpp.cpp  parser_cpp.h  strcopy.c  strcopy.h
source/examples/: CMakeLists.txt  example_c.c  example_cpp.cpp
source/tests/: CMakeLists.txt  gtest_parser.cpp  gtest_parsercpp.cpp
